--- a/Intro_to_Neural_Network.ipynb
+++ b/Intro_to_Neural_Network.ipynb
@@ -151,31 +151,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FkycB01UbjFY",
-        "outputId": "f575661d-8b6a-4ebd-e1dc-5f2137e01622"
+        "id": "FkycB01UbjFY"
       },
       "source": [
         "import math\n",
         "math.e"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2.718281828459045"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -184,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PHlW-RdnbjFZ",
-        "outputId": "2726fdb4-2823-4476-b699-177dda2d6b7d"
+        "outputId": "ec8b9869-21be-4d8a-f783-adaa2b037a67"
       },
       "source": [
         "#Implementing Sigmoid \n",
@@ -208,7 +191,7 @@
         "    return max(0,x)\n",
         "print(f\"Relu: {relu(90)}\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +212,7 @@
       "source": [
         "import tensorflow"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -240,7 +223,7 @@
       "source": [
         "from tensorflow.keras.activations import relu"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -251,7 +234,7 @@
       "source": [
         "from tensorflow.keras import backend as K"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -262,7 +245,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -427,7 +410,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -438,7 +421,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -458,7 +441,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -469,7 +452,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -489,7 +472,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -500,7 +483,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -520,7 +503,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -531,7 +514,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -542,7 +525,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -634,7 +617,7 @@
       "source": [
         "# What is the data for us ?"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -654,7 +637,7 @@
       "source": [
         "from PIL import Image"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -665,7 +648,7 @@
       "source": [
         "#image = Image.open(\"../HD_image.jpg\")"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -676,7 +659,7 @@
       "source": [
         "#image.height"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -685,9 +668,9 @@
         "id": "YQdF3AGSbjFn"
       },
       "source": [
-        "image.width"
+        "#image.width"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -700,7 +683,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -711,7 +694,7 @@
       "source": [
         "#rgb_image = Image.open(\"../RGB-color-model.jpg\")"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -720,9 +703,9 @@
         "id": "nUWhOxQBbjFo"
       },
       "source": [
-        "rgb_image"
+        "#rgb_image"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -731,9 +714,9 @@
         "id": "YHXi5Si3bjFp"
       },
       "source": [
-        "plt.imshow(np.array(rgb_image)[:,:,:], cmap=\"gray\")"
+        "#plt.imshow(np.array(rgb_image)[:,:,:], cmap=\"gray\")"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1316,26 +1299,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uy27e28kbjF9",
-        "outputId": "262077f3-27e4-4bce-8752-07edaaf65f4a"
+        "id": "uy27e28kbjF9"
       },
       "source": [
         "print(499*403*3) # Number of neurons in Input Layer to accomates a image of shape (499, 403)\n",
         "# print(1080*1920*3)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "603291\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
