HERE THE INDUSTRY MODEL DEVLOPEMENT PROCESS  &&&  HOW TO WORK ON IDE

--- a/Multiple_model_Cross_validation_Technique_&_industry_model_devlopement_process_.ipynb
+++ b/Multiple_model_Cross_validation_Technique_&_industry_model_devlopement_process_.ipynb
@@ -6,6 +6,7 @@
       "name": "Multiple model Cross validation Technique & industry model devlopement process  .ipynb",
       "private_outputs": true,
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1h6vdd_VeGjDqQ2RQ8YN2XEaVbhw1TWaD",
       "authorship_tag": "ABX9TyNlGY5R33gt6/BpGMbRgIV/",
       "include_colab_link": true
